package protobufs

const (
	TypeUrlPrefix    = "types.quilibrium.com"
	NamespacePrefix  = TypeUrlPrefix + "/quilibrium.node."
	AppPrefix        = NamespacePrefix + "application.pb."
	ChannelPrefix    = NamespacePrefix + "channel.pb."
	ClockPrefix      = NamespacePrefix + "clock.pb."
	KeysPrefix       = NamespacePrefix + "keys.pb."
	DataPrefix       = NamespacePrefix + "data.pb."
	NodePrefix       = NamespacePrefix + "node.pb."
	GlobalPrefix     = NamespacePrefix + "global.pb."
	TokenPrefix      = NamespacePrefix + "token.pb."
	HypergraphPrefix = NamespacePrefix + "hypergraph.pb."
	ComputePrefix    = NamespacePrefix + "compute.pb."

	// Global types
	ProverJoinTypeUrl          = GlobalPrefix + "ProverJoin"
	ProverLeaveTypeUrl         = GlobalPrefix + "ProverLeave"
	ProverPauseTypeUrl         = GlobalPrefix + "ProverPause"
	ProverResumeTypeUrl        = GlobalPrefix + "ProverResume"
	ProverConfirmTypeUrl       = GlobalPrefix + "ProverConfirm"
	ProverRejectTypeUrl        = GlobalPrefix + "ProverReject"
	ProverUpdateTypeUrl        = GlobalPrefix + "ProverUpdate"
	ProverKickTypeUrl          = GlobalPrefix + "ProverKick"
	SeniorityMergeTypeUrl      = GlobalPrefix + "SeniorityMerge"
	MessageRequestTypeUrl      = GlobalPrefix + "MessageRequest"
	MessageBundleTypeUrl       = GlobalPrefix + "MessageBundle"
	GlobalAlertTypeUrl         = GlobalPrefix + "GlobalAlert"
	GlobalFrameHeaderTypeUrl   = GlobalPrefix + "GlobalFrameHeader"
	GlobalFrameTypeUrl         = GlobalPrefix + "GlobalFrame"
	FrameHeaderTypeUrl         = GlobalPrefix + "FrameHeader"
	AppShardFrameTypeUrl       = GlobalPrefix + "AppShardFrame"
	ProverLivenessCheckTypeUrl = GlobalPrefix + "ProverLivenessCheck"
	FrameVoteTypeUrl           = GlobalPrefix + "FrameVote"
	FrameConfirmationTypeUrl   = GlobalPrefix + "FrameConfirmation"

	// Data types
	DataPeerListAnnounceTypeUrl    = DataPrefix + "DataPeerListAnnounce"
	CeremonyPeerTypeUrl            = DataPrefix + "DataPeer"
	AnnounceProverJoinTypeUrl      = DataPrefix + "AnnounceProverJoin"
	AnnounceProverLeaveTypeUrl     = DataPrefix + "AnnounceProverLeave"
	AnnounceProverPauseTypeUrl     = DataPrefix + "AnnounceProverPause"
	AnnounceProverResumeTypeUrl    = DataPrefix + "AnnounceProverResume"
	CeremonyCompressedSyncTypeUrl  = DataPrefix + "DataCompressedSync"
	InclusionProofsMapTypeUrl      = DataPrefix + "InclusionProofsMap"
	InclusionSegmentsMapTypeUrl    = DataPrefix + "InclusionSegmentsMap"
	InclusionCommitmentsMapTypeUrl = DataPrefix + "InclusionCommitmentsMap"
	FrameRebroadcastTypeUrl        = DataPrefix + "FrameRebroadcast"

	// Shared app types
	ApplicationTypeUrl                  = AppPrefix + "Application"
	ExecutionContextTypeUrl             = AppPrefix + "ExecutionContext"
	MessageTypeUrl                      = AppPrefix + "Message"
	IntrinsicExecutionInputTypeUrl      = AppPrefix + "IntrinsicExecutionInput"
	IntrinsicExecutionOutputTypeUrl     = AppPrefix + "IntrinsicExecutionOutput"
	HypergraphComparisonQueryTypeUrl    = AppPrefix + "HypergraphComparisonQuery"
	HypergraphComparisonResponseTypeUrl = AppPrefix + "HypergraphComparisonResponse"
	BranchChildTypeUrl                  = AppPrefix + "BranchChild"
	LeafDataTypeUrl                     = AppPrefix + "LeafData"
	HypergraphComparisonTypeUrl         = AppPrefix + "HypergraphComparison"
	MultiproofTypeUrl                   = AppPrefix + "Multiproof"
	PathTypeUrl                         = AppPrefix + "Path"
	TraversalSubProofTypeUrl            = AppPrefix + "TraversalSubProof"
	TraversalProofTypeUrl               = AppPrefix + "TraversalProof"
	HypersyncMetadataTypeUrl            = AppPrefix + "HypersyncMetadata"

	// Token types
	TokenDeployTypeUrl              = TokenPrefix + "TokenDeploy"
	TokenUpdateTypeUrl              = TokenPrefix + "TokenUpdate"
	TransactionTypeUrl              = TokenPrefix + "Transaction"
	PendingTransactionTypeUrl       = TokenPrefix + "PendingTransaction"
	MintTransactionTypeUrl          = TokenPrefix + "MintTransaction"
	TokenConfigurationTypeUrl       = TokenPrefix + "TokenConfiguration"
	TokenMintStrategyTypeUrl        = TokenPrefix + "TokenMintStrategy"
	AuthorityTypeUrl                = TokenPrefix + "Authority"
	FeeBasisTypeUrl                 = TokenPrefix + "FeeBasis"
	TransactionInputTypeUrl         = TokenPrefix + "TransactionInput"
	TransactionOutputTypeUrl        = TokenPrefix + "TransactionOutput"
	PendingTransactionInputTypeUrl  = TokenPrefix + "PendingTransactionInput"
	PendingTransactionOutputTypeUrl = TokenPrefix + "PendingTransactionOutput"
	MintTransactionInputTypeUrl     = TokenPrefix + "MintTransactionInput"
	MintTransactionOutputTypeUrl    = TokenPrefix + "MintTransactionOutput"
	RecipientBundleTypeUrl          = TokenPrefix + "RecipientBundle"
	TokenRequestTypeUrl             = TokenPrefix + "TokenRequest"

	// Hypergraph types
	HypergraphDeployTypeUrl        = HypergraphPrefix + "HypergraphDeploy"
	HypergraphUpdateTypeUrl        = HypergraphPrefix + "HypergraphUpdate"
	VertexAddTypeUrl               = HypergraphPrefix + "VertexAdd"
	VertexRemoveTypeUrl            = HypergraphPrefix + "VertexRemove"
	HyperedgeAddTypeUrl            = HypergraphPrefix + "HyperedgeAdd"
	HyperedgeRemoveTypeUrl         = HypergraphPrefix + "HyperedgeRemove"
	HypergraphConfigurationTypeUrl = HypergraphPrefix + "HypergraphConfiguration"
	HypergraphRequestTypeUrl       = HypergraphPrefix + "HypergraphRequest"

	// Compute types
	ComputeDeployTypeUrl                 = ComputePrefix + "ComputeDeploy"
	ComputeUpdateTypeUrl                 = ComputePrefix + "ComputeUpdate"
	CodeDeploymentTypeUrl                = ComputePrefix + "CodeDeployment"
	CodeExecuteTypeUrl                   = ComputePrefix + "CodeExecute"
	CodeFinalizeTypeUrl                  = ComputePrefix + "CodeFinalize"
	ComputeIntrinsicConfigurationTypeUrl = ComputePrefix + "ComputeIntrinsicConfiguration"
	ExecutionDependencyTypeUrl           = ComputePrefix + "ExecutionDependency"
	ExecuteOperationTypeUrl              = ComputePrefix + "ExecuteOperation"
	ExecutionNodeTypeUrl                 = ComputePrefix + "ExecutionNode"
	ExecutionDAGTypeUrl                  = ComputePrefix + "ExecutionDAG"
	ExecutionStageTypeUrl                = ComputePrefix + "ExecutionStage"
	StateTransitionTypeUrl               = ComputePrefix + "StateTransition"
	ExecutionResultTypeUrl               = ComputePrefix + "ExecutionResult"
	ComputeRequestTypeUrl                = ComputePrefix + "ComputeRequest"

	// Channel types
	P2PChannelEnvelopeTypeUrl      = ChannelPrefix + "P2PChannelEnvelope"
	MessageCiphertextTypeUrl       = ChannelPrefix + "MessageCiphertext"
	ProvingKeyAnnouncementTypeUrl  = ChannelPrefix + "ProvingKeyAnnouncement"
	ProvingKeyRequestTypeUrl       = ChannelPrefix + "ProvingKeyRequest"
	InclusionAggregateProofTypeUrl = ChannelPrefix + "InclusionAggregateProof"
	InclusionCommitmentTypeUrl     = ChannelPrefix + "InclusionCommitment"
	KeyBundleAnnouncementTypeUrl   = ChannelPrefix + "KeyBundleAnnouncement"
	IdentityKeyTypeUrl             = ChannelPrefix + "IdentityKey"
	SignedPreKeyTypeUrl            = ChannelPrefix + "SignedPreKey"

	// Keys types
	Ed448PublicKeyTypeUrl                         = KeysPrefix + "Ed448PublicKey"
	Ed448PrivateKeyTypeUrl                        = KeysPrefix + "Ed448PrivateKey"
	Ed448SignatureTypeUrl                         = KeysPrefix + "Ed448Signature"
	X448PublicKeyTypeUrl                          = KeysPrefix + "X448PublicKey"
	X448PrivateKeyTypeUrl                         = KeysPrefix + "X448PrivateKey"
	PCASPublicKeyTypeUrl                          = KeysPrefix + "PCASPublicKey"
	PCASPrivateKeyTypeUrl                         = KeysPrefix + "PCASPrivateKey"
	BLS48581G1PublicKeyTypeUrl                    = KeysPrefix + "BLS48581G1PublicKey"
	BLS48581G1PrivateKeyTypeUrl                   = KeysPrefix + "BLS48581G1PrivateKey"
	BLS48581G2PublicKeyTypeUrl                    = KeysPrefix + "BLS48581G2PublicKey"
	BLS48581G2PrivateKeyTypeUrl                   = KeysPrefix + "BLS48581G2PrivateKey"
	BLS48581SignatureTypeUrl                      = KeysPrefix + "BLS48581Signature"
	BLS48581SignatureWithProofOfPossessionTypeUrl = KeysPrefix + "BLS48581SignatureWithProofOfPossession"
	BLS48581AddressedSignatureTypeUrl             = KeysPrefix + "BLS48581AddressedSignature"
	BLS48581AggregateSignatureTypeUrl             = KeysPrefix + "BLS48581AggregateSignature"
)
